implemented basic structure

--- a/thesis.tex
+++ b/thesis.tex
@@ -72,9 +72,9 @@ bookmarksopen=false,colorlinks=true,linkcolor=black]{hyperref}
 \input{title}
 \pagenumbering{roman}
 
-%\addsec{Zusammenfassung}
+\addsec{Zusammenfassung}
 %\input{Zusammenfassung}
-%\addsec{Abstract}
+\addsec{Abstract}
 %\input{Abstract}
 
 %Inhalt
@@ -90,32 +90,33 @@ bookmarksopen=false,colorlinks=true,linkcolor=black]{hyperref}
 \chapter{Introduction}
 %\input{intro}
 \chapter{The Standard Model and its extension to Supersymmetry}
-%\input{SM}
-\chapter{The LHC and the CMS Detector}
-%\input{LHCCMS}
-\chapter{Data triggering and processing}
+\input{theory}
+\chapter{Experimental setup}
+\input{setup}
+%\chapter{Data triggering and processing}
 %\input{Trigger}
-\chapter{Event reconstruction}
+%\chapter{Event reconstruction}
 %\input{RECO}
 %\input{MET}
 
-\chapter{Dilepton final states in supersymmetric models}
-%\input{signal}
-\chapter{Event Selection}
-%\input{selection}
+%\chapter{Dilepton final states in supersymmetric models}
+%\input{dileptons}
+\chapter{Data analysis and event selection}
+\input{ana}
 \chapter{Estimation of Standard Model backgrounds}
-%\input{Backgrounds}
+\input{background}
 
 \chapter{Results}
-%\input{results}
+\input{results}
 %\chapter{Efficiencies for \Wprime searches}
 %\input{TP}
-\chapter{Systematic Uncertainties}
+%\chapter{Systematic uncertainties}
 %\input{systematics}
 %\chapter{Background Estimation}
 %\input{BackgroundFit}
-\chapter{Statistical Interpretation}
-%\input{Statistics}
+\chapter{Interpretation in simplified models}
+\input{interpretation}
+\chapter{Outlook to LHC Run II}
 \chapter{Conclusion}
 %\input{conclusion}
 
