finished LHC chapter

--- a/setup.tex
+++ b/setup.tex
@@ -1,3 +1,4 @@
 \section{The CERN Large Hadron Collider}
+\input{LHC}
 \section{The CMS detector}
 \section{Data acquisition and event reconstruction}
