--- a/thesis.tex
+++ b/thesis.tex
@@ -28,8 +28,8 @@
 \usepackage{mathrsfs}
 \usepackage{tabularx}
 \usepackage{slashed}
-%\usepackage{appendix}
-
+\usepackage{xspace}
+%\usepackage{ptdr-definitions}
 
 \usepackage[small]{caption}
 \usepackage[plainheadsepline,automark]{scrpage2}
@@ -40,6 +40,7 @@
 \usepackage[bookmarks=true, bookmarksnumbered=false,  
 bookmarksopen=false,colorlinks=true,linkcolor=black]{hyperref}
 
+\parskip 10pt
 \setlength{\parindent}{0mm}
 % Header
 \pagestyle{scrheadings}
@@ -66,6 +67,128 @@ bookmarksopen=false,colorlinks=true,linkcolor=black]{hyperref}
 %\changefont{pbk}{b}{sc}
 %Dokument
 \begin{document}
+\newcommand{\GeV}{\ensuremath{\,\text{Ge\hspace{-.08em}V}}\xspace}
+\newcommand{\GeVns}{\ensuremath{\text{Ge\hspace{-.08em}V}}\xspace} % no leading thinspace
+\newcommand{\gev}{\GeV}
+\newcommand{\TeV}{\ensuremath{\,\text{Te\hspace{-.08em}V}}\xspace}
+\newcommand{\TeVns}{\ensuremath{\text{Te\hspace{-.08em}V}}\xspace} % no leading thinspace
+
+\newcommand{\lumifinal}{$19.4\fbinv$} %{1048~\pbinv}}
+\newcommand{\updated}{\textcolor{green}{This has been updated to the full luminosity}}
+\newcommand{\notupdated}{\textcolor{red}{Not updated (possibly can't be updated ATM)}}
+\newcommand{\significanceNumber}{$2.5\sigma$\xspace}
+%\newcommand{\invpb}{\ensuremath{\textrm{pb-1}}}
+%\newcommand{\ttbar}{\ensuremath{t+\bar{t}}}
+\newcommand{\mc}{Monte Carlo\xspace}
+\newcommand{\Red}{\color{red}}
+\newcommand{\Zmumu}{\ensuremath{Z\rightarrow \mu\mu}}
+\newcommand{\Zee}{\ensuremath{Z\rightarrow ee}}
+\newcommand{\JZB}{\ensuremath{\textrm{JZB}}\xspace}
+\newcommand{\jzb}{\JZB}
+\newcommand{\mll}{\ensuremath{m_{\ell\ell}}\xspace}
+
+% processes
+\newcommand{\Ztautau}{\ensuremath{\Z\to\tau\tau}}
+\newcommand{\zjets}{\ensuremath{Z+\textrm{jets}}\xspace}
+\newcommand{\Wjets}{\ensuremath{\PW+\text{jets}}\xspace}
+\newcommand{\DYjets}{\ensuremath{\text{DY}+\text{jets}}\xspace}
+\newcommand{\ttll}{$\ttbar\rightarrow\ell^+\ell^-$}
+\newcommand{\tttau}{$\ttbar\rightarrow\tau^+\ell^-$}
+\newcommand{\tthad}{$\ttbar\rightarrow{}q\bar{q}$}
+
+\newcommand{\cls}{\ensuremath{\mathrm{CL_S}}}
+\newcommand{\tauh}{\ensuremath{\tau_\text{h}}}
+\newcommand{\rmue}{\ensuremath{r_{\Pgm{}\Pe}}\xspace}
+\newcommand{\RT}{\ensuremath{R_\mathrm{T}}\xspace}
+\newcommand{\nvert}{\ensuremath{N_\text{Vertices}}}
+\newcommand{\njets}{\ensuremath{N_\text{Jets}}}
+\newcommand{\mcut}{\ensuremath{m_\text{max}}}
+\newcommand{\eps}{\ensuremath{\epsilon}}
+\newcommand{\CLS}{\cls}
+\newcommand{\Rinout}{\ensuremath{R_\text{in/out}}\xspace}
+\newcommand{\Rsfof}{\ensuremath{R\text{(SF/OF)}}\xspace}
+\newcommand{\Rmmof}{\ensuremath{R\text{($\Pgm\Pgm$/OF)}}\xspace}
+\newcommand{\Reeof}{\ensuremath{R\text{($\Pe\Pe$/OF)}}\xspace}
+\newcommand{\etalep}{\ensuremath{\eta_\text{lep}}\xspace}
+
+\newcommand{\sSeven}{\ensuremath{\sqrt{s}=7\TeV}\xspace}
+\newcommand{\sEight}{\ensuremath{\sqrt{s}=8\TeV}\xspace}
+\newcommand{\lepSec}{The applied lepton selection changed in the \sEight-MC with respect to the \sSeven-MC}
+
+\newcommand{\EM}{\ensuremath{\Pe^\pm\Pgm^\mp}\xspace}
+
+%PAS things
+\newcommand{\Ht}{\HT}
+\newcommand{\Met}{\MET}
+
+\newcommand{\ptll} {\ensuremath{\pt_{\ell\ell}}}
+\newcommand{\CTEQ} {{\textsc{cteq}}}
+
+% Miscellaneous macros
+\newcommand{\forward}{forward\xspace}
+\newcommand{\central}{central\xspace}
+\newcommand{\inclusive}{inclusive\xspace}
+\newcommand{\cfAN}[1]{(cf.~#1)}
+\newcommand{\acAN}[1]{\cite{EdgeAN} Sec.~#1}
+\newcommand{\acANApp}[1]{\cite{EdgeAN} App.~#1}
+\newcommand{\benAN}[1]{\cite{TemplatesAN} Sec.~#1}
+\newcommand{\fixme}[1]{{\color{red}\sffamily{\bfseries{}FIXME:} #1}}
+
+
+\newcommand{\LowMetCentral}{\emph{LowMetCentral}}
+\newcommand{\LowJetsCentral}{\emph{LowJetsCentral}}
+\newcommand{\HighCentral}{\emph{HighCentral}}
+\newcommand{\LowMetForward}{\emph{LowMetForward}}
+\newcommand{\LowJetsForward}{\emph{LowJetsForward}}
+\newcommand{\HighForward}{\emph{HighForward}}
+
+%%%% FOR THE JZB SECTION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\definecolor{SFZP}{rgb}   {0.0 , 0.0 , 0.0} % signal region in black
+\definecolor{OFZP}{rgb}   {0.6 , 0.0 , 0.0}
+\definecolor{OFSB}{rgb}   {0.0 , 0.6 , 0.0}
+\definecolor{SFSB}{rgb}   {0.0 , 0.0 , 0.6}
+\definecolor{Bpred}{rgb}  {1.0 , 0.0 , 0.0} % average B pred in red 
+
+\newcommand{\Bpred}{\ensuremath{{\color{Bpred}JZB^\mathrm{pred}_\mathrm{bkgd}}}}
+\newcommand{\SFZPJZBPOS}{\ensuremath{{\color{SFZP} \textrm{JZB}^\mathrm{SF}_\mathrm{pos}}}} % signal region
+\newcommand{\SFZPJZBNEG}{\ensuremath{{\color{SFZP} \textrm{JZB}^\mathrm{SF}_\mathrm{neg}}}} % JZB negative region
+\newcommand{\OFZPJZBNEG}{\ensuremath{{\color{OFZP} \textrm{JZB}^\mathrm{OF}_\mathrm{neg}}}}
+\newcommand{\OFZPJZBPOS}{\ensuremath{{\color{OFZP} \textrm{JZB}^\mathrm{OF}_\mathrm{pos}}}}
+\newcommand{\SFSBJZBNEG}{\ensuremath{{\color{SFSB} \textrm{JZB}^\mathrm{SFSB}_\mathrm{neg}}}}
+\newcommand{\SFSBJZBPOS}{\ensuremath{{\color{SFSB} \textrm{JZB}^\mathrm{SFSB}_\mathrm{pos}}}}
+\newcommand{\OFSBJZBNEG}{\ensuremath{{\color{OFSB} \textrm{JZB}^\mathrm{OFSB}_\mathrm{neg}}}}
+\newcommand{\OFSBJZBPOS}{\ensuremath{{\color{OFSB} \textrm{JZB}^\mathrm{OFSB}_\mathrm{pos}}}}
+
+\newcommand{\secondchi}{\ensuremath{{\tilde{\chi}^2_0}}\xspace}
+\newcommand{\firstchi}{\ensuremath{{\tilde{\chi}^1_0}}\xspace}
+\newcommand{\sbottom}{\ensuremath{\tilde{b}}\xspace}
+\newcommand{\slepton}{\ensuremath{\tilde{l}}\xspace}
+
+%\newcommand{\SFZPJZchi2B}{\ensuremath{{\color{SFZP} \textrm{JZB}^\mathrm{SF}}}} % JZB negative region
+%\newcommand{\OFZPJZB}{\ensuremath{{\color{OFZP} \textrm{JZB}^\mathrm{OF}}}}
+%\newcommand{\SFSBJZB}{\ensuremath{{\color{SFSB} \textrm{JZB}^\mathrm{SFSB}}}}
+%\newcommand{\OFSBJZB}{\ensuremath{{\color{OFSB} \textrm{JZB}^\mathrm{OFSB}}}}
+%
+\newcommand{\SFZP}{{\color{SFZP} SFZP}} % JZB negative region
+\newcommand{\OFZP}{{\color{OFZP} OFZP}}
+\newcommand{\SFSB}{{\color{SFSB} SFSB}}
+\newcommand{\OFSB}{{\color{OFSB} OFSB}}
+
+
+
+\newcommand{\PFSE}{\ensuremath{ \mathcal{P}_{FSE}}}
+
+\newcommand{\eepm}{\Pep\Pem}
+\newcommand{\mmpm}{\Pgmp\Pgmm}
+\newcommand{\empm}{\ensuremath{\Pe^\pm \Pgm^\mp}}
+
+
+\newcommand{\SFZPJZB}{\ensuremath{{\color{SFZP} \textrm{JZB}^\mathrm{SF}}}} % JZB negative region
+\newcommand{\OFZPJZB}{\ensuremath{{\color{OFZP} \textrm{JZB}^\mathrm{OF}}}}
+\newcommand{\SFSBJZB}{\ensuremath{{\color{SFSB} \textrm{JZB}^\mathrm{SFSB}}}}
+\newcommand{\OFSBJZB}{\ensuremath{{\color{OFSB} \textrm{JZB}^\mathrm{OFSB}}}}
+
+
 
 
 %Titelseite
