--- a/title.tex
+++ b/title.tex
@@ -4,23 +4,23 @@
   \vspace{-0.5cm}
  {\huge\bf{Search for Supersymmetry in opposite-sign same-flavour dilepton events with the CMS detector in proton-proton collisions at $\sqrt{s}=8$ TeV}\\}
   \vspace{2.5cm}
-    { Von der Fakultät für Mathematik, Informatik und Naturwissenschaften der
+    { Von der Fakult\"at f\"ur Mathematik, Informatik und Naturwissenschaften der
 RWTH Aachen University zur Erlangung des akademischen Grades
 eines Doktors der Naturwissenschaften genehmigte Dissertation\\}
   \vspace{2.5cm}
     {\Large vorgelegt von}\\
     {\Large\bf Jan-Frederik Schulte, M.Sc.}\\
-    {\Large\bf aus Münster } \\
+    {\Large\bf aus M\"unster } \\
     
   \vspace{3.cm}
     {\large Berichter: }\\
   	{\Large\bf Prof. Dr. Lutz Feld}\\
-  	{\Large\bf Prof. Dr. Michael Krämer}\\
+  	{\Large\bf Prof. Dr. Michael Kr\"amer}\\
   	
   \vspace{2.cm}
-  {\Large Termin der mündlichen Prüfung: xx.xx.2015\\}
+  {\Large Termin der m\"undlichen Pr\"ufung: xx.xx.2015\\}
   \vspace{2cm}
-  {\Large Diese Dissertation ist auf den Internetseiten der Hochschulbibliothek online verfügbar.}	
+  {\Large Diese Dissertation ist auf den Internetseiten der Hochschulbibliothek online verf\"ugbar.}	
 \end{center}
 \cleardoublepage
 \newpage
