--- a/thesis.tex
+++ b/thesis.tex
@@ -37,8 +37,7 @@
 \captionsetup{font={small}}
 
 % Verlinktes Inhaltsverzeichnis
-\usepackage[bookmarks=true, bookmarksnumbered=false,  
-bookmarksopen=false,colorlinks=true,linkcolor=black]{hyperref}
+\usepackage[bookmarks,colorlinks=true,linkcolor=black]{hyperref}
 
 \parskip 10pt
 \setlength{\parindent}{0mm}
