add first half of CMS description

--- a/setup.tex
+++ b/setup.tex
@@ -1,4 +1,5 @@
 \section{The CERN Large Hadron Collider}
 \input{LHC}
 \section{The CMS detector}
+\input{CMS}
 \section{Data acquisition and event reconstruction}
