--- a/thesis.bib
+++ b/thesis.bib
@@ -72,3 +72,14 @@
   howpublished = {\url{https://cds.cern.ch/record/1706606/}},
   note = {Accessed: 2014-08-06}
 }
+@misc{CMSScetch,
+	title = {CMS detector design},
+  howpublished = {\url{http://cms.web.cern.ch/news/cms-detector-design}},
+  note = {Accessed: 2014-08-08}
+}
+@article{EGM-10-003,
+      AUTHOR       = "{CMS Collaboration}",
+      title        = "{Electromagnetic calorimeter calibration with 7 TeV data}",
+      year         = "2010",
+      note      = "CMS Physics Analysis Summary EGM-10-003",
+}
