--- a/thesis.tex
+++ b/thesis.tex
@@ -85,7 +85,7 @@
 \newcommand{\JZB}{\ensuremath{\textrm{JZB}}\xspace}
 \newcommand{\jzb}{\JZB}
 \newcommand{\mll}{\ensuremath{m_{\ell\ell}}\xspace}
-
+\newcommand{\pt}{\ensuremath{p_{T}}\xspace}
 % processes
 \newcommand{\Ztautau}{\ensuremath{\Z\to\tau\tau}}
 \newcommand{\zjets}{\ensuremath{Z+\textrm{jets}}\xspace}
