finish description of CMS

--- a/CMS.tex
+++ b/CMS.tex
@@ -49,5 +49,41 @@ The typical resolution of the ECAL is parametrized as
 \end{equation}
 with three terms describing different sources of uncertainty. The first term includes statistical fluctuation in the production of scintillation light as well as the energy distribution over several crystals. The second term covers such sources of noise as electronic noise or pileup. The constant term accounts for other sources of uncertainties such as calibration errors. The size of the different contributions has been confirmed in test beam measurements~\cite{EGM-10-003}. 
 \subsection{The hadron calorimeter}
+The hadron calorimeter (HCAL) measures the energy of charged and neutral hadrons. In the barrel region of the detector it is situated between the back face of the ECAL and the coil of the solenoid, at radii between $\unit{1.7}{\meter}$ and $\unit{2.95}{\meter}$, limiting the amount of material that can be used in its construction. Therefore additional detectors are placed outside of the volume of the magnet, forming the hadron outer calorimeter (HO). The HCAL barrel (HB) is complemented on each side by a HCAL endcap (HE) and the geometric coverage is extended to high values of $\vert \eta \vert$ by dedicated forward calorimeters (HF). The placement of these subdetectors relative to the other components of CMS are shown in Figure~\ref{fig:HCAL}.
+\begin{figure}[htbp]
+\centering
+  \includegraphics[width=0.6\textwidth]{plots/CMS/HCAL.png}
+\caption{Schematic view of the CMS HCAL.}
+\label{fig:HCAL}
+\end{figure} 
+\subsubsection*{The HCAL barrel and outer detectors (HB and HO)}  
+The HB covers the geometric region $\vert \eta \vert \leq 1.3$. It is constructed as a sandwich calorimeter, consisting of plastic scintillator as the active material. For the absorber material, the fourteen inner layers of the HB are made from brass, while steel is used for the front and back plates of the HB to increase the stability of the construction. The scintillator is divided in 144 segments in $\phi$ and 32 segments in $\eta$, resulting in a spatial granularity of 0.087 in both $\eta$ and $\phi$. The scintillation light produced in the active material is transported to hybrid photo diodes using scintillating fibres. As all layers of one tower in $\eta$ and $\phi$ are read out by the the same photo diode, there is no segmentation in the readout in $r$, except for the two towers closest to the HE on each side. The material of the ECAL in front of the HB corresponds to about 1.1 interaction length $\lambda_i$. The absorber material of the HB itself amounts to only 5.82 $\lambda_i$ at $\eta = 0$, which increases to 10.6 $\lambda_i$ at $\vert \eta \vert = 1.3$. To measure the energy of jets not contained in the HB, the HO is placed outside the vacuum containment of the solenoid. It consists of one additional layer of scintillator, with the magnet acting as absorber, except for most central part of the detector, where one additional layer of steel absorber and scintillator are installed. Hereby the material budget of the HCAL is increased to at least 10 $\lambda_i$ over the whole barrel region.
 
+\subsubsection*{The HCAL endcaps (HE)}
+The HE extends the geometric coverage of the HCAL up to $\vert\eta\vert =3.0$, coinciding with that of the EEs. It is constructed from the the combination of brass absorber and plastic scintillator as the HB and for the region $1.3 \leq \vert\eta\vert \leq 1.6$ also retains the $\Delta\eta \times \Delta \phi = 0.087\times 0.087$ granularity in $\eta$ and $\phi$. For $\vert\eta\vert \geq 1.6$ the segmentation is coarser, resulting a granularity of $\Delta\eta \times \Delta \phi \approx 0.17\times0.17$. This structure again corresponds to about 10 $\lambda_i$. The longitudinal segmentation of the readout of the towers differs based on the location of the tower. The two towers closest to the beam line are read out in three segments, while most others are read out in two segments. The two towers overlapping with HB are read out without longitudinal segmentation. Multipixel hybrid photo diodes have been chosen for the readout due to their low sensitivity to magnetic fields.
+\subsubsection*{The hadron forward calorimeter (HF)}
+Of all subdetectors of CMS, the HF covers the highest values of $\vert\eta\vert$, reaching up to values of $\vert\eta\vert = 5.2$. This close to the beam pipe radiation hardness is the key feature of the design, as nearly 90\% of the energy deposited in the detector as the result of a proton-proton interaction is allotted to the HF. It is constructed as two $\unit{3.5}{\meter}$ long cylinders with a radius of $\unit{1.3}{\meter}$, located at $\vert z \vert = \unit{11.2}{\meter}$. The first $\unit{1.65}{\meter}$ consist of plates of steel with a thickness of $\unit{5}{\milli\meter}$, again corresponding to about 10 $\lambda_i$. The active material are quartz fibres, which are inserted into grooves in the steel plates. The particles created in showers in the absorber emit Cherenkov radiation in the fibres, which is detected by photomultiplier tubes at the end of the fibres. As the Cherenkov threshold is lowest for electrons, at $\unit{190}{\kilo\electronvolt}$, the HF is more sensitive towards electromagnetic than hadronic showers. To separate the two, half of the fibres start only at a depth of $\unit{22}{\centi\meter}$ inside the absorber. As the electromagnetic shower develop faster, they deposit most of their energy before this point, which distinguishes them from hadronic showers. 	     
 \subsection{The muon system} 
+Muons are in general not stopped by any of the subdetectors of the CMS detector inside the solenoid. Therefore they can be measured with high precision in a clean environment outside of it. The muon detectors are therefore placed inside the return yoke of the magnet, both for the muon barrel (MB), covering up to $\vert\eta\vert = 1.2$ and muon endcap (ME) detectors, placed between $\vert\eta\vert = 0.9$ and $\vert\eta\vert = 2.4$. Being placed so far away from the interaction point, the muon detector have to cover a large area, which requires them to be rather inexpensive compared to other technologies used in the construction of CMS. Three different types of gaseous detectors are used to provide at the same time identification, \pt measurement and triggering for muons. In the barrel region, drift tubes (DT) are used as the main muon detectors, while in the endcaps cathode strip chambers (CSC) are used because they are faster and better equipped to deal with the larger and inhomogeneous magnetic field in this region of the detector. To provide a very fast muon tagging for the trigger, resistive plate chamber (RPC) complement the other two technologies in both the barrel and the endcaps. 
+\subsubsection*{Drift tubes (DT)}
+In the barrel, the TD chambers, each made of 2 or 3 super layers, which in turns are made up of four layers of TDs, are grouped together into four muon stations. Of these the first three contain 2 groups of 4 layers of chambers measuring in the $r-\phi$ plane and one group measuring the $z$ coordinate. In the last muon station only the groups measuring in $r-\phi$ are present. The chambers in each chamber are offset by half of the width of a cell with respect to the next layer to not leave dead spots in the geometric coverage. The DT system consists of about 172000 sensitive wires. The drift tubes are filled with a mixture of 85\% Ar and 15\% $CO_2$, and their structure is shown in Figure~\ref{fig:DT} The $r\phi$ resolution of a single layer of DT is about $\unit{250}{\micro\meter}$, so that one chamber reaches a precision of $\unit{100}{\micro\meter}$.
+\begin{figure}[htbp]
+\centering
+  \includegraphics[width=0.6\textwidth]{plots/CMS/DT.png}
+\caption{Schematic view of one DT.}
+\label{fig:DT}
+\end{figure}  
+\subsubsection*{Cathode strip chambers (CSC)}
+The CSC are multiwire proportional chambers, consisting of 6 planes of anode wires interleaved with 7 panels of cathode strips. The chambers have trapezoidal shape and are arranged in four discs around the beam axis, each further segmented into two or three rings. The cathode strips measure the $\phi$ coordinate while the anode wires measure the radial coordinate. Figure~\ref{fig:CSC} shows the structure of one chamber on the left side and the creation of a signal due to a amplification of the initial ionization in an avalanche close to the anode wire. 
+\begin{figure}[htbp]
+\centering
+  \includegraphics[width=0.6\textwidth]{plots/CMS/CSC.png}
+\caption{Schematic view of one CSC (left) and the creation of a signal (right).}
+\label{fig:CSC}
+\end{figure}  
+\subsubsection*{Resistive plate chambers (RPC)}
+The RPCs consist of three layers of Bakelite, which form two small gas filled gaps and between which high voltage is applied. The amplification of the initial signal is very fast in this configuration, with drift times of about $\unit{5}{\nano\second}$. Therefore this technology is well suited to associate muon candidates to the LHC bunch crossings. In the barrel region six layers of RPCs are installed, while three layers are used in the endcaps for $\vert\eta\vert \leq 1.6$.
+\subsubsection*{Momentum resolution}
+The \pt resolution of the muon system alone was expected to be about 10\% for muons with \pt up to $\unit{200}{\giga\electronvolt}$. Combined with the information from the inner tracking system, a resolution of about 1\% was expected to be achieved in the central region of $\vert\eta\vert \leq 0.8$ for a \pt of $\unit{10}{\giga\electronvolt}$, increasing to about 2\% for a \pt of $\unit{200}{\giga\electronvolt}$.
+
+The \pt resolution for muons has been measured using data collected in 2010~\cite{MUO-10-004}. Using the muon system alone, resolutions better than 10\% have been found for the barrel region for muons with \pt $> \unit{15}{\giga\electronvolt}$. The muon resolution improves when combining the information from the muon system with those from the inner tracking system. The precision of the tracking system dominates for a wide \pt range and averaging over $\eta$ and $\phi$ resolutions of (1.8$\pm$0.3(stat.))\% at $\unit{\pt = 30}{\giga\electronvolt}$ to (2.3$\pm$0.3(stat.))\% at $\unit{\pt = 50}{\giga\electronvolt}$ have been achieved.
