--- a/thesis.bib
+++ b/thesis.bib
@@ -83,3 +83,16 @@
       year         = "2010",
       note      = "CMS Physics Analysis Summary EGM-10-003",
 }
+@article{MUO-10-004,
+	  AUTHOR 		= "{CMS Collaboration}",
+      title         = "{Performance of CMS muon reconstruction in pp collision
+                       events at $\sqrt{s}$ = 7 TeV}",
+      journal       = "J. Instrum.",
+      collaboration = "CMS Collaboration",
+      number        = "arXiv:1206.4071. CMS-MUO-10-004. CERN-PH-EP-2012-173",
+      volume        = "7",
+      pages         = "P10002. 81 p",
+      month         = "Jun",
+      year          = "2012",
+      note          = "Comments: Submitted to the Journal of Instrumentation",
+}
