--- a/setup.tex
+++ b/setup.tex
@@ -2,4 +2,5 @@
 \input{LHC}
 \section{The CMS detector}
 \input{CMS}
-\section{Data acquisition and event reconstruction}
+\section{Trigger and data acquisition}
+\input{DAQTrig}
