--- a/thesis.bib
+++ b/thesis.bib
@@ -73,7 +73,7 @@
   note = {Accessed: 2014-08-06}
 }
 @misc{CMSScetch,
-	title = {CMS detector design},
+	title = "{CMS detector design}",
   howpublished = {\url{http://cms.web.cern.ch/news/cms-detector-design}},
   note = {Accessed: 2014-08-08}
 }
@@ -95,4 +95,74 @@
       month         = "Jun",
       year          = "2012",
       note          = "Comments: Submitted to the Journal of Instrumentation",
+}
+@misc{HLTConfigBrowser,
+	title = "{CMS HLT config browser}",
+	howpublished = {\url{http://j2eeps.cern.ch/cms-project-confdb-hltdev/browser/}},
+	note = {Accessed: 2014-10-09}
+}
+
+@article{Adam:2005zf,
+      author         = "Adam, W. and others",
+      title          = "{The CMS high level trigger}",
+      collaboration  = "CMS Trigger and Data Acquisition Group",
+      journal        = "Eur.Phys.J.",
+      volume         = "C46",
+      pages          = "605-667",
+      doi            = "10.1140/epjc/s2006-02495-8",
+      year           = "2006",
+      eprint         = "hep-ex/0512077",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0512077;%%",
+}
+
+@article{HLTProceedings,
+  author={Bauer, G. and others},
+  title="{The CMS High Level Trigger System: Experience and Future Development}",
+  journal={Journal of Physics: Conference Series},
+  volume={396},
+  number={1},
+  pages={012008},
+  url={http://stacks.iop.org/1742-6596/396/i=1/a=012008},
+  year={2012},
+
+}
+@article{FruhwirtGSFCMS,
+  author={W. Adam and R. Fr{\"u}hwirth and A. Strandlie and T. Todorov},
+  title="{Reconstruction of electrons with the Gaussian-sum filter in the CMS tracker at the LHC}",
+  journal={Journal of Physics G: Nuclear and Particle Physics},
+  volume={31},
+  number={9},
+  pages={N9},
+  url={http://stacks.iop.org/0954-3899/31/i=9/a=N01},
+  year={2005}
+}
+
+@article{Baffioni:2006cd,
+      author         = "Baffioni, S. and Charlot, C. and Ferri, F. and Futyan, D.
+                        and Meridiani, P. and others",
+      title          = "{Electron reconstruction in CMS}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C49",
+      pages          = "1099-1116",
+      doi            = "10.1140/epjc/s10052-006-0175-5",
+      year           = "2007",
+      reportNumber   = "CERN-CMS-NOTE-2006-040",
+      SLACcitation   = "%%CITATION = EPHJA,C49,1099;%%",
+}
+
+
+
+@article{Chatrchyan:2014fea,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Description and performance of track and primary-vertex
+                        reconstruction with the CMS tracker}",
+      collaboration  = "CMS Collaboration",
+      year           = "2014",
+      eprint         = "1405.6569",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "CMS-TRK-11-001, CERN-PH-EP-2014-070",
+      SLACcitation   = "%%CITATION = ARXIV:1405.6569;%%",
 }
