--- a/thesis.tex
+++ b/thesis.tex
@@ -2,9 +2,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Grundlegende Einstellungen
-\documentclass[fontsize=10pt,openright,paper=a4]{scrbook}
+\documentclass[fontsize=11pt,openright,paper=a4]{scrbook}
 \usepackage[bottom=4.0cm, left=3.0cm, right=3.0cm]{geometry} 
-\usepackage[squaren, thinspace ,thinqspace]{SIunits}
+\usepackage[squaren, thinspace ,thinqspace,binary]{SIunits}
 \usepackage[latin2]{inputenc}
 \usepackage[T1]{fontenc}
 \newcommand{\changefont}[3]{
@@ -86,6 +86,7 @@
 \newcommand{\jzb}{\JZB}
 \newcommand{\mll}{\ensuremath{m_{\ell\ell}}\xspace}
 \newcommand{\pt}{\ensuremath{p_{T}}\xspace}
+\newcommand{\Et}{\ensuremath{E_{T}}\xspace}
 % processes
 \newcommand{\Ztautau}{\ensuremath{\Z\to\tau\tau}}
 \newcommand{\zjets}{\ensuremath{Z+\textrm{jets}}\xspace}
@@ -119,7 +120,7 @@
 %PAS things
 \newcommand{\Ht}{\HT}
 \newcommand{\Met}{\MET}
-
+\newcommand{\MET}{\ensuremath{E_{T}^{miss}}\xspace}
 \newcommand{\ptll} {\ensuremath{\pt_{\ell\ell}}}
 \newcommand{\CTEQ} {{\textsc{cteq}}}
 
