--- a/thesis.bib
+++ b/thesis.bib
@@ -86,7 +86,7 @@
 @article{MUO-10-004,
 	  AUTHOR 		= "{CMS Collaboration}",
       title         = "{Performance of CMS muon reconstruction in pp collision
-                       events at $\sqrt{s}$ = 7 TeV}",
+                       events at $\sqrt{s}$ = 7 TeV CHECK FOR JOURNAL PUBLICATION}",
       journal       = "J. Instrum.",
       collaboration = "CMS Collaboration",
       number        = "arXiv:1206.4071. CMS-MUO-10-004. CERN-PH-EP-2012-173",
@@ -157,7 +157,7 @@
 @article{Chatrchyan:2014fea,
       author         = "Chatrchyan, Serguei and others",
       title          = "{Description and performance of track and primary-vertex
-                        reconstruction with the CMS tracker}",
+                        reconstruction with the CMS tracker CHECK FOR JOURNAL PUBLICATION}",
       collaboration  = "CMS Collaboration",
       year           = "2014",
       eprint         = "1405.6569",
@@ -165,4 +165,54 @@
       primaryClass   = "physics.ins-det",
       reportNumber   = "CMS-TRK-11-001, CERN-PH-EP-2014-070",
       SLACcitation   = "%%CITATION = ARXIV:1405.6569;%%",
+}
+@article{Fruhwirth1987444,
+title = "Application of Kalman filtering to track and vertex fitting ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "262",
+number = "2.3",
+pages = "444 - 450",
+year = "1987",
+note = "",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/0168-9002(87)90887-4",
+url = "http://www.sciencedirect.com/science/article/pii/0168900287908874",
+author = "R. Fr{\"u}hwirth"
+}
+
+@misc{SWGuideIterativeTracking,
+	title = "{CMS Software Guide on Iterative Tracking}",
+	howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideIterativeTracking?rev=9}},
+	note = {Accessed: 2014-10-11}
+}
+
+@article{1748-0221-5-03-T03022,
+  author={CMS Collaboration},
+  title={Performance of CMS muon reconstruction in cosmic-ray events},
+  journal={Journal of Instrumentation},
+  volume={5},
+  number={03},
+  pages={T03022},
+  url={http://stacks.iop.org/1748-0221/5/i=03/a=T03022},
+  year={2010},
+  abstract={The performance of muon reconstruction in CMS is evaluated using a large data sample of cosmic-ray muons recorded in 2008. Efficiencies of various high-level trigger, identification, and reconstruction algorithms have been measured for a broad range of muon momenta, and were found to be in good agreement with expectations from Monte Carlo simulation. The relative momentum resolution for muons crossing the barrel part of the detector is better than 1% at 10 GeV/ c and is about 8% at 500 GeV/ c , the latter being only a factor of two worse than expected with ideal alignment conditions. Muon charge misassignment ranges from less than 0.01% at 10 GeV/ c to about 1% at 500 GeV/ c .}
+}
+
+@techreport{CMS-PAS-PFT-10-003,
+      title         = "{Particle-flow commissioning with muons and electrons
+                       from
+  J/Psi and W events at 7 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "2010. Geneva",
+      number        = "CMS-PAS-PFT-10-003",
+      year          = "2010",
+}	
+@article{Anderson:1365024,
+      author       = "CMS Collaboration",
+      title        = "{Review of clustering algorithms and energy corrections in
+                      ECAL}",
+      month        = "Mar",
+      year         = "2010",
+      journal	   = "CMS Internal Note IN-10-008",
 }
